--- a/index.html
+++ b/index.html
@@ -343,7 +343,8 @@
 <br> 
 <p id="locationsparagraph2"class="d-md-none d-lg-block d-xl-none d-sm-none d-xs-none">list of cities and countries goes here</p>
 <p  id="locpar3"class="d-xl-none d-lg-none d-md-block d-sm-none align-text-left d-xs-none ">list of<br> countries<br> and cities goes here</p>
-<p id="locpar4"class="d-xl-none d-lg-none d-md-none d-sm-block">boner</p>
+<p id="locpar5"class="d-xl-none d-lg-none d-md-none d-sm-block">list of cities<br> and countries<br>goes here</p>
+<p id="locpar6"class="d-xl-none d-lg-none d-md-none d-sm-none d-xs-block">list of cities<br> and countries<br>goes here</p>
 </div>
 </div>
 </div>
@@ -371,7 +372,7 @@
     <a href="/products.html">Products</a><a href="/recipes.html">Recipes</a><a href="/aboutus.html">About</a><br>
     <a href="/findus.html">Findus</a><a href="/index.html">Home</a>
 </div>
-<div id="locationsparagraph2"class="d-md-none d-lg-block d-xl-none d-sm-none d-xs-none">
+<div id="locationsparagraph2"class="d-none d-lg-block d-xl-none">
     <a href="/products.html">Products</a><a href="/recipes.html">Recipes</a><a href="/aboutus.html">About</a><br>
     <a href="/findus.html">Findus</a><a href="/index.html">Home</a>
 </div>
@@ -380,9 +381,13 @@
     <a href="/products.html">Products</a><a href="/recipes.html">Recipes</a><a href="/aboutus.html">About</a><br>
     <a href="/findus.html">Findus</a><a href="/index.html">Home</a>
 </div>
-<div id="footerpar4"class="d-xl-none d-lg-none d-md-none d-sm-block">
-    <a href="/products.html">Products</a><a href="/recipes.html">Recipes</a><a href="/aboutus.html">About</a><br>
-    <a href="/findus.html">Findus</a><a href="/index.html">Home</a>
+<div id="locpar4"class="d-xl-none d-lg-none d-md-none d-sm-block d-xs-none ">
+    <a href="/products.html">Products</a><br><a href="/recipes.html">Recipes</a><br><a href="/aboutus.html">About</a><br>
+    <a href="/findus.html">Findus</a><br><a href="/index.html">Home</a>
+</div>
+<div id="footerpar4"class="d-xl-none d-lg-none d-md-none d-sm-none d-xs-block ">
+    <a href="/products.html">Products</a><br><a href="/recipes.html">Recipes</a><br><a href="/aboutus.html">About</a><br>
+    <a href="/findus.html">Findus</a><br><a href="/index.html">Home</a>
 </div>
       </div>
       </div>
