must create Products page b4 3/10/21

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 <br> 
 <p id="locationsparagraph2"class="d-md-none d-lg-block d-xl-none d-sm-none d-xs-none">list of cities and countries goes here</p>
 <p  id="locpar3"class="d-xl-none d-lg-none d-md-block d-sm-none align-text-left d-xs-none ">list of<br> countries<br> and cities goes here</p>
-<p id="locpar5"class="d-xl-none d-lg-none d-md-none d-sm-block">list of cities<br> and countries<br>goes here</p>
+<p id="locpar4"class="d-none d-md-none d-lg-none d-xl-none d-sm-block">list of cities<br> and countries<br>goes here</p>
 <p id="locpar6"class="d-xl-none d-lg-none d-md-none d-sm-none d-xs-block">list of cities<br> and countries<br>goes here</p>
 </div>
 </div>
@@ -381,11 +381,11 @@
     <a href="/products.html">Products</a><a href="/recipes.html">Recipes</a><a href="/aboutus.html">About</a><br>
     <a href="/findus.html">Findus</a><a href="/index.html">Home</a>
 </div>
-<div id="locpar4"class="d-xl-none d-lg-none d-md-none d-sm-block d-xs-none ">
+<div id="locpar4"class="d-none d-md-none d-lg-none d-xl-none d-sm-block ">
     <a href="/products.html">Products</a><br><a href="/recipes.html">Recipes</a><br><a href="/aboutus.html">About</a><br>
     <a href="/findus.html">Findus</a><br><a href="/index.html">Home</a>
 </div>
-<div id="footerpar4"class="d-xl-none d-lg-none d-md-none d-sm-none d-xs-block ">
+<div id="footerpar4"class="d-xs-block d-sm-none d-md-none d-lg-none d-xl-none ">
     <a href="/products.html">Products</a><br><a href="/recipes.html">Recipes</a><br><a href="/aboutus.html">About</a><br>
     <a href="/findus.html">Findus</a><br><a href="/index.html">Home</a>
 </div>
