must complete individ recipes pages and products/individ products page

--- a/aboutus.html
+++ b/aboutus.html
@@ -86,10 +86,10 @@
         </div>
         <!-- Above is the cards for sm breakpoints up to XL breakpoints. 
              Below are the cards for xs breakpoints, from 525 px downwards. -->
-        <div class="container-fluid d-sm-none" id="smandmdhidden">
+        <div class="container-fluid " id="smandmdhidden">
             <div class="row col-9 offset-2" id="smandmdhidden">
                 <div class=" align-self-left mt-5">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card ml-5" style="width: 18rem;">
                         <img class="card-img-top" src="..." alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">boner gawk<h5>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="row col-9 offset-2">
-                <div class="card" style="width: 18rem;">
+                <div class="card ml-5" style="width: 18rem;">
                     <img class="card-img-top" src="..." alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
@@ -139,10 +139,10 @@
         </div>
                 <!-- Above is the cards for sm breakpoints up to XL breakpoints. 
                     Below observe the cards for xs breakpoints going from 525 px all the way down to 0px-->
-        <div class="container-fluid d-sm-none" id="smandmdhidden">
+        <div class="container-fluid " id="smandmdhidden">
             <div class="row col-9 offset-2" id="smandmdhidden">
                 <div class="align-self-left mt-5">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card ml-5" style="width: 18rem;">
                         <img class="card-img-top" src="..." alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">boner gawk<h5>
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <div class="row col-9 offset-2">
-                <div class="card" style="width: 18rem;">
+                <div class="card ml-5" style="width: 18rem;">
                     <img class="card-img-top" src="..." alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
