must make products page/modals, and finishing touches also

--- a/aboutus.html
+++ b/aboutus.html
@@ -17,6 +17,54 @@
 </head>
 
 <body>
+
+    <div id="modalRecipe1" class="modal fade" role="dialog">
+        <div class="modal-dialog" id="modaldialog">
+            <!-- Modal content-->
+            <div class="modal-content" id="modaldialog">
+                <div class="modal-header" id="modaldialog">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title" style="text-align-last: center"id="modaldialog"></h4>
+                </div>
+                <div class="modal-body" id="modaldialog">
+                    <div class="card" id="modalcard">
+                        <div class="card-header ml-5" id="modalheader">
+                          Featured
+                        </div>
+                        <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
+                        <div class="card-body">
+                         <!--- <h5 class="card-title">Special title treatment</h5> -->
+                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                         <!--- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                        </div>
+                      </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+                <h3  class="ml-5"id="modalheader">Ingredients</h3>
+                <ul >
+                    <li>3 Kiwis, fresh (1 for garnish)</li>
+                    <li>2 cans of Moocho Guava</li>
+                    <li>1/4 cup of Seltzer</li>
+                    <li>2 Tbsp Lime juice</li>
+                    <li>Ice</li>
+
+                </ul>
+                <h3  class="ml-5"id="modalheader3">Recipe</h3>
+                <ul id="modalheader2">
+                    <li>3 Kiwis, fresh (1 for garnish)</li>
+                    <li>2 cans of Moocho Guava</li>
+                    <li>1/4 cup of Seltzer</li>
+                    <li>2 Tbsp Lime juice</li>
+                    <li>Ice</li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
     <div class ="d-flex">
         <div class="row">
             <a class="align-middle avbar-brand mr-auto d-md-none d-lg-none d-xl-block d-xs-none d-sm-none mt-3" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg0" class=""></a>
@@ -64,21 +112,21 @@
             <div class="row">
             <div class="col-4 offset-2 col-xs-4 align-self-left mt-5">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">the baddest bches<h5>
+                      <h5 class="card-title">izz khad<h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
                   </div>
             </div>
             <div class="col-4  col-xs-4 align-self-right align-items-right pl-5 mt-5" id="card6col">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
                   </div>
             </div>
@@ -90,18 +138,18 @@
             <div class="row col-9 offset-2" id="smandmdhidden">
                 <div class=" align-self-left mt-5">
                     <div class="card ml-5" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">boner gawk<h5>
+                          <h5 class="card-title">Izz at lan<h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                         </div>
                       </div>
                 </div>
             </div>
             <div class="row col-9 offset-2">
                 <div class="card ml-5" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -117,7 +165,7 @@
             <div class="row">
             <div class="col-4 offset-2 col-xs-4 align-self-left mt-5">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">the baddest bches<h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -127,7 +175,7 @@
             </div>
             <div class="col-4  col-xs-4 align-self-right align-items-right pl-5 mt-5" id="card6col">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -143,7 +191,7 @@
             <div class="row col-9 offset-2" id="smandmdhidden">
                 <div class="align-self-left mt-5">
                     <div class="card ml-5" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">boner gawk<h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -154,7 +202,7 @@
             </div>
             <div class="row col-9 offset-2">
                 <div class="card ml-5" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
