--- a/aboutus.html
+++ b/aboutus.html
@@ -67,10 +67,15 @@
 
     <div class ="d-flex">
         <div class="row">
-            <a class="align-middle avbar-brand mr-auto d-md-none d-lg-none d-xl-block d-xs-none d-sm-none mt-3" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg0" class=""></a>
-            <a class="align-middle navbar-brand mr-auto d-md-none d-lg-block d-xl-none d-xs-none d-sm-none mt-3" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg1" class=""></a>
-            <a class=" align-middle navbar-brand mr-auto d-md-none d-lg-none d-xl-none d-xs-none d-sm-block mt-3" href="#"><img src="img/moocho.PNG" height="130" width="130"  id="logoimg4"class=""></a>
-            <a class=" align-middle navbar-brand mr-auto d-md-block d-lg-none d-xl-none d-xs-none d-sm-none mt-3" href="#"><img src="img/moocho.PNG" height="130" width="130"  id="logoimg2"class=""></a>
+            <div class="align-self-left">
+                <a class="btn btn-social-icon btn-facebook ml-3" href="http://www.facebook.com/profile.php?id="><span class="fa fa-facebook"></span></a>
+                <a class="btn btn-social-icon btn-instagram ml-3" href=""><span class="fa fa-instagram"></span></a>
+                <a class="btn btn-social-icon btn-twitter ml-3" href=""><span class="fa fa-twitter"></span></a>
+            </div>
+            <a class="align-middle avbar-brand mr-auto d-md-none d-lg-none d-xl-block d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg0" class=""></a>
+            <a class="align-middle navbar-brand mr-auto d-md-none d-lg-block d-xl-none d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg1" class=""></a>
+            <a class=" align-middle navbar-brand mr-auto d-md-none d-lg-none d-xl-none d-xs-none d-sm-block" href="#"><img src="img/moocho.PNG" height="130" width="130"  id="logoimg4"class=""></a>
+            <a class=" align-middle navbar-brand mr-auto d-md-block d-lg-none d-xl-none d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130"  id="logoimg2"class=""></a>
 
             <a class=" d-sm-none d-xs-block" id="logoimg7"><img src="img/moocho.PNG" height="130" width="130"></a>
             <a class=" d-sm-none d-xs-block" id="logoimg8"><img src="img/moocho.PNG" height="130" width="130"></a>
@@ -92,18 +97,13 @@
 
             <div class="collapse navbar-collapse" id="Navbar">
                <ul class="navbar-nav mr-auto fa-ul " > <!-- fa ul class-->
-                  <li class="nav-item" id="activenav" ><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>Products</a></li> <!-- active tag specifies current page-->
+                  <li class="nav-item" id="activenav" ><a class="nav-link" href="./contactus.html"><span class="fa fa-list fa-lg"></span>Products</a></li> <!-- active tag specifies current page-->
                   <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span>Recipes</a></li>
                   <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>About</a></li>
                   <li class="nav-item"><a class="nav-link" href=""><span class="fa fa-address-card fa-lg"></span>Find Us</a></li> <!-- link to the id = footer of the page here-->
             </div>
                 </ul>
-                <span class="navbar-text">
-                    <a id="logintableButton"> <!-- remove data-toggle="modal" and data-target=#loginmodalfor assignment 4, do this for reserve button on md,l,xl screen-->
-                        <span class="fa fa-sign-in"></span> 
-                        <h2>Login</h2>
-                    </a>
-                </span>
+           
         </div>
     </nav>
 
@@ -114,7 +114,7 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">izz khad<h5>
+                      <h5 class="card-title">moocho juice recipe<h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
@@ -124,7 +124,7 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">moocho juice recipe</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
@@ -140,7 +140,7 @@
                     <div class="card ml-5" style="width: 18rem;">
                         <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Izz at lan<h5>
+                          <h5 class="card-title">moocho juice recipe<h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                         </div>
@@ -151,9 +151,9 @@
                 <div class="card ml-5" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">moocho juice recipe</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
                   </div>
 
@@ -167,9 +167,9 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">the baddest bches<h5>
+                      <h5 class="card-title">moocho juice recipe<h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
                   </div>
             </div>
@@ -177,9 +177,9 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">moocho juice recipe</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
                   </div>
             </div>
@@ -193,9 +193,9 @@
                     <div class="card ml-5" style="width: 18rem;">
                         <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">boner gawk<h5>
+                          <h5 class="card-title">moocho juice recipe<h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn btn-primary"data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                         </div>
                       </div>
                 </div>
@@ -204,9 +204,9 @@
                 <div class="card ml-5" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">moocho juice recipe</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
                   </div>
                   <button type="button" class="btn btn-secondary offset-2 mt-3 mb-5 pt-2 pb-2 pl-2 pr-2">boner gawk gawk</button>
