add carousel and finishing touches, then deploy site tomorrow

--- a/index.html
+++ b/index.html
@@ -387,17 +387,17 @@
 
       <div class="col-5 align-items-right ml-5" id="locationsparagraph">
 <div class="d-md-none d-lg-none d-xl-block d-sm-none d-xs-none">
-    <a href="/products.html">Products</a><a href="/recipes.html">Recipes</a><a href="/aboutus.html">About</a><br>
-    <a href="/findus.html">Findus</a><a href="/index.html">Home</a>
+    <a href="/products.html" class="mr-3">Products</a><a href="/recipes.html" class="mr-3">Recipes</a><a href="/aboutus.html">About</a><br>
+    <a href="/findus.html" class="mr-3">Findus</a><a href="/index.html">Home</a>
 </div>
 <div id="locationsparagraph2"class="d-none d-lg-block d-xl-none">
-    <a href="/products.html">Products</a><a href="/recipes.html">Recipes</a><a href="/aboutus.html">About</a><br>
-    <a href="/findus.html">Findus</a><a href="/index.html">Home</a>
+    <a href="/products.html" class="mr-2">Products</a><a href="/recipes.html" class="mr-2">Recipes</a><a href="/aboutus.html" >About</a><br>
+    <a href="/findus.html" class="mr-2">Findus</a><a href="/index.html">Home</a>
 </div>
 
 <div id="locpar3"class="d-xl-none d-lg-none d-md-block d-sm-none align-text-left d-xs-none ">
-    <a href="/products.html">Products</a><a href="/recipes.html">Recipes</a><a href="/aboutus.html">About</a><br>
-    <a href="/findus.html">Findus</a><a href="/index.html">Home</a>
+    <a href="/products.html" class="mr-2">Products</a><a href="/recipes.html" class="mr-2">Recipes</a><a href="/aboutus.html">About</a><br>
+    <a href="/findus.html" class="mr-2">Findus</a><a href="/index.html">Home</a>
 </div>
 <div id="locpar4"class="d-none d-md-none d-lg-none d-xl-none d-sm-block ">
     <a href="/products.html">Products</a><br><a href="/recipes.html">Recipes</a><br><a href="/aboutus.html">About</a><br>
