--- a/aboutus.html
+++ b/aboutus.html
@@ -74,11 +74,11 @@
             </div>
             <a class="align-middle avbar-brand mr-auto d-md-none d-lg-none d-xl-block d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg0" class=""></a>
             <a class="align-middle navbar-brand mr-auto d-md-none d-lg-block d-xl-none d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg1" class=""></a>
-            <a class=" align-middle navbar-brand mr-auto d-md-none d-lg-none d-xl-none d-xs-none d-sm-block" href="#"><img src="img/moocho.PNG" height="130" width="130"  id="logoimg4"class=""></a>
+            <a id="logoimg9"class=" align-middle navbar-brand mr-auto d-md-none d-lg-none d-xl-none d-xs-none d-sm-block" href="#"><img src="img/moocho.PNG" height="130" width="130"  id="logoimg4"class=""></a>
             <a class=" align-middle navbar-brand mr-auto d-md-block d-lg-none d-xl-none d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130"  id="logoimg2"class=""></a>
 
-            <a class=" d-sm-none d-xs-block" id="logoimg7"><img src="img/moocho.PNG" height="130" width="130"></a>
-            <a class=" d-sm-none d-xs-block" id="logoimg8"><img src="img/moocho.PNG" height="130" width="130"></a>
+            <a class=" d-sm-none d-xs-none" id="logoimg7"><img src="img/moocho.PNG" height="130" width="130"></a>
+            <a class=" d-sm-none d-xs-none" id="logoimg8"><img src="img/moocho.PNG" height="130" width="130"></a>
 
 
             
