--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
 <body>
     <div class ="d-flex">
         <div class="row">
+            <div class="align-self-left">
+                <a class="btn btn-social-icon btn-facebook ml-3" href="http://www.facebook.com/profile.php?id="><span class="fa fa-facebook"></span></a>
+                <a class="btn btn-social-icon btn-instagram ml-3" href=""><span class="fa fa-instagram"></span></a>
+                <a class="btn btn-social-icon btn-twitter ml-3" href=""><span class="fa fa-twitter"></span></a>
+            </div>
             <a class="align-middle avbar-brand mr-auto d-md-none d-lg-none d-xl-block d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg0" class=""></a>
             <a class="align-middle navbar-brand mr-auto d-md-none d-lg-block d-xl-none d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg1" class=""></a>
-            <a class=" align-middle navbar-brand mr-auto d-md-none d-lg-none d-xl-none d-xs-none d-sm-block" href="#"><img src="img/moocho.PNG" height="130" width="130"  id="logoimg4"class=""></a>
+            <a id="logoimg9"class=" align-middle navbar-brand mr-auto d-md-none d-lg-none d-xl-none d-xs-none d-sm-block" href="#"><img src="img/moocho.PNG" height="130" width="130"  id="logoimg4"class=""></a>
             <a class=" align-middle navbar-brand mr-auto d-md-block d-lg-none d-xl-none d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130"  id="logoimg2"class=""></a>
 
-            <a class=" d-sm-none d-xs-block" id="logoimg7"><img src="img/moocho.PNG" height="130" width="130"></a>
-            <a class=" d-sm-none d-xs-block" id="logoimg8"><img src="img/moocho.PNG" height="130" width="130"></a>
+            <a class=" d-sm-none d-xs-none" id="logoimg7"><img src="img/moocho.PNG" height="130" width="130"></a>
+            <a class=" d-sm-none d-xs-none" id="logoimg8"><img src="img/moocho.PNG" height="130" width="130"></a>
 
 
             
