look in orange book for notes

--- a/aboutus.html
+++ b/aboutus.html
@@ -240,7 +240,7 @@
                       </div>
                 
                       <div class="col-5 align-items-right ml-5" id="locationsparagraph">
-                <div class="d-md-none d-lg-none d-xl-block d-sm-none d-xs-none">
+                <div class="d-md-none d-lg-none d-xl-block d-sm-none d-xs-none" id="locpar1">
                     <a href="/products.html" class="mr-3">Products</a><a href="/recipes.html" class="mr-3">Recipes</a><a href="/aboutus.html">About</a><br>
                     <a href="/findus.html" class="mr-3">Findus</a><a href="/index.html">Home</a>
                 </div>
