--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
 </div>
 
 <div class="col-5 align-items-right ml-5" id="locationsparagraph" >
-<p  class="d-md-none d-lg-none d-xl-block d-sm-none d-xs-none">list of cities and countries goes here</p>
+<p  class="d-md-none d-lg-none d-xl-block d-sm-none d-xs-none" id="locpar1">list of cities and countries goes here</p>
 <br> 
-<p id="locationsparagraph2"class="d-md-none d-lg-block d-xl-none d-sm-none d-xs-none">list of cities and countries goes here</p>
+<p id="locationsparagraph27"class="d-md-none d-lg-block d-xl-none d-sm-none d-xs-none">list of cities and countries goes here</p>
 <p  id="locpar3"class="d-xl-none d-lg-none d-md-block d-sm-none align-text-left d-xs-none ">list of<br> countries<br> and cities goes here</p>
 <p id="locpar4"class="d-none d-md-none d-lg-none d-xl-none d-sm-block">list of cities<br> and countries<br>goes here</p>
 <p id="locpar6"class="d-xl-none d-lg-none d-md-none d-sm-none d-xs-block">list of cities<br> and countries<br>goes here</p>
@@ -391,7 +391,7 @@
       </div>
 
       <div class="col-5 align-items-right ml-5" id="locationsparagraph">
-<div class="d-md-none d-lg-none d-xl-block d-sm-none d-xs-none">
+<div class="d-md-none d-lg-none d-xl-block d-sm-none d-xs-none" id="locpar1">
     <a href="/products.html" class="mr-3">Products</a><a href="/recipes.html" class="mr-3">Recipes</a><a href="/aboutus.html">About</a><br>
     <a href="/findus.html" class="mr-3">Findus</a><a href="/index.html">Home</a>
 </div>
