look at orange book for notes

--- a/contactus.html
+++ b/contactus.html
@@ -67,10 +67,10 @@
 
     <div class ="d-flex">
         <div class="row">
-            <div class="align-self-left">
-                <a class="btn btn-social-icon btn-facebook ml-3" href="http://www.facebook.com/profile.php?id="><span class="fa fa-facebook"></span></a>
-                <a class="btn btn-social-icon btn-instagram ml-3" href=""><span class="fa fa-instagram"></span></a>
-                <a class="btn btn-social-icon btn-twitter ml-3" href=""><span class="fa fa-twitter"></span></a>
+            <div class="align-self-left ml-5">
+                <a class="btn btn-social-icon   ml-3" href="http://www.facebook.com/profile.php?id="><span class="fa fa-facebook"></span></a>
+                <a class="btn btn-social-icon  ml-3" href=""><span class="fa fa-instagram"></span></a>
+                <a class="btn btn-social-icon  ml-3" href=""><span class="fa fa-twitter"></span></a>
             </div>
             <a class="align-middle avbar-brand mr-auto d-md-none d-lg-none d-xl-block d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg0" class=""></a>
             <a class="align-middle navbar-brand mr-auto d-md-none d-lg-block d-xl-none d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg1" class=""></a>
@@ -334,9 +334,9 @@
     <h3 id="followusheader"> Follow Us Here!</h3>
     <br>
     <div id="icons">
-    <a class="btn btn-social-icon btn-facebook ml-3" href="http://www.facebook.com/profile.php?id="><span class="fa fa-facebook"></span></a>
-    <a class="btn btn-social-icon btn-instagram ml-3" href=""><span class="fa fa-instagram"></span></a>
-    <a class="btn btn-social-icon btn-twitter ml-3" href=""><span class="fa fa-twitter"></span></a>
+    <a class="btn btn-social-icon ml-3" href="http://www.facebook.com/profile.php?id="><span class="fa fa-facebook"></span></a>
+    <a class="btn btn-social-icon  ml-3" href=""><span class="fa fa-instagram"></span></a>
+    <a class="btn btn-social-icon  ml-3" href=""><span class="fa fa-twitter"></span></a>
     </div>
     </div>
           <div class="col-1"> <!-- create new vl classes for sm and xs screens-->
