--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class ="d-flex">
         <div class="row">
-            <div class="align-self-left">
+            <div class="align-self-left ml-5">
                 <a class="btn btn-social-icon btn-facebook ml-3" href="http://www.facebook.com/profile.php?id="><span class="fa fa-facebook"></span></a>
                 <a class="btn btn-social-icon btn-instagram ml-3" href=""><span class="fa fa-instagram"></span></a>
                 <a class="btn btn-social-icon btn-twitter ml-3" href=""><span class="fa fa-twitter"></span></a>
@@ -56,12 +56,7 @@
                   <li class="nav-item"><a class="nav-link" href=""><span class="fa fa-address-card fa-lg"></span>Find Us</a></li> <!-- link to the id = footer of the page here-->
             </div>
                 </ul>
-                <span class="navbar-text">
-                    <a id="logintableButton"> <!-- remove data-toggle="modal" and data-target=#loginmodalfor assignment 4, do this for reserve button on md,l,xl screen-->
-                        <span class="fa fa-sign-in"></span> 
-                        <h2>Login</h2>
-                    </a>
-                </span>
+                
         </div>
     </nav>
 
