--- a/aboutus.html
+++ b/aboutus.html
@@ -67,10 +67,10 @@
 
     <div class ="d-flex">
         <div class="row">
-            <div class="align-self-left">
-                <a class="btn btn-social-icon btn-facebook ml-3" href="http://www.facebook.com/profile.php?id="><span class="fa fa-facebook"></span></a>
-                <a class="btn btn-social-icon btn-instagram ml-3" href=""><span class="fa fa-instagram"></span></a>
-                <a class="btn btn-social-icon btn-twitter ml-3" href=""><span class="fa fa-twitter"></span></a>
+            <div class="align-self-left ml-5">
+                <a class="btn btn-social-icon  ml-3" href="http://www.facebook.com/profile.php?id="><span class="fa fa-facebook"></span></a>
+                <a class="btn btn-social-icon  ml-3" href=""><span class="fa fa-instagram"></span></a>
+                <a class="btn btn-social-icon  ml-3" href=""><span class="fa fa-twitter"></span></a>
             </div>
             <a class="align-middle avbar-brand mr-auto d-md-none d-lg-none d-xl-block d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg0" class=""></a>
             <a class="align-middle navbar-brand mr-auto d-md-none d-lg-block d-xl-none d-xs-none d-sm-none" href="#"><img src="img/moocho.PNG" height="130" width="130" id="logoimg1" class=""></a>
@@ -108,13 +108,13 @@
     </nav>
 
     
-        <div class = "container-fluid mt-5" id="xshidden">
+        <div class = "text-center container-fluid mt-5" id="xshidden">
             <div class="row">
             <div class="col-4 offset-2 col-xs-4 align-self-left mt-5">
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">moocho juice recipe<h5>
+                      <h5 class="card-title">moocho juice recipe 1<h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
@@ -124,7 +124,7 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">moocho juice recipe</h5>
+                      <h5 class="card-title">moocho juice recipe 2</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
@@ -134,13 +134,13 @@
         </div>
         <!-- Above is the cards for sm breakpoints up to XL breakpoints. 
              Below are the cards for xs breakpoints, from 525 px downwards. -->
-        <div class="container-fluid " id="smandmdhidden">
+        <div class="text-center container-fluid " id="smandmdhidden">
             <div class="row col-9 offset-2" id="smandmdhidden">
                 <div class=" align-self-left mt-5">
                     <div class="card ml-5" style="width: 18rem;">
                         <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">moocho juice recipe<h5>
+                          <h5 class="card-title">moocho juice recipe 1 small<h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                         </div>
@@ -151,7 +151,7 @@
                 <div class="card ml-5" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">moocho juice recipe</h5>
+                      <h5 class="card-title">moocho juice recipe 2 small</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
@@ -161,13 +161,13 @@
         </div>
 
             
-        <div class = "container-fluid mt-5" id="xshidden">
+        <div class = "text-center container-fluid mt-5" id="xshidden">
             <div class="row">
             <div class="col-4 offset-2 col-xs-4 align-self-left mt-5">
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">moocho juice recipe<h5>
+                      <h5 class="card-title">moocho juice recipe 3<h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
@@ -177,7 +177,7 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">moocho juice recipe</h5>
+                      <h5 class="card-title">moocho juice recipe 4</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
@@ -187,13 +187,13 @@
         </div>
                 <!-- Above is the cards for sm breakpoints up to XL breakpoints. 
                     Below observe the cards for xs breakpoints going from 525 px all the way down to 0px-->
-        <div class="container-fluid " id="smandmdhidden">
+        <div class="text-center container-fluid " id="smandmdhidden">
             <div class="row col-9 offset-2" id="smandmdhidden">
                 <div class="align-self-left mt-5">
                     <div class="card ml-5" style="width: 18rem;">
                         <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">moocho juice recipe<h5>
+                          <h5 class="card-title">moocho juice recipe 3<h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           <a href="#" class="btn btn-primary"data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                         </div>
@@ -204,7 +204,7 @@
                 <div class="card ml-5" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">moocho juice recipe</h5>
+                      <h5 class="card-title">moocho juice recipe 4</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
