look at orange book for notes

--- a/aboutus.html
+++ b/aboutus.html
@@ -235,7 +235,7 @@
                 </div>
                 </div>
                       <div class="col-1"> <!-- create new vl classes for sm and xs screens-->
-                        <div class="vl  d-xs-none d-md-block" id="followusvl"></div>
+                        <div class="vl  d-xs-none d-md-block mt-5" id="followusvl"></div>
                         <div class ="vl d-sm-block d-md-none" id="vl2"></div>
                       </div>
                 
