--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 <div class = "container-fluid mt-5">
     <div class="row">
-    <div class="col-6 align-self-left mt-5">
+    <div class="offset-1 col-5 align-self-left mt-5">
         <img class="img-fluid" src="img/moochojbox.PNG" >
     </div>
     <div class="col-6 align-self-right align-items-right pl-5 mt-5" id="card6col">
@@ -247,9 +247,9 @@
             </div>
     </div>
             
-    <div class = "container-fluid mt-5">
+    <div class = "container-fluid mt-5 mb-4">
         <div class="row">
-        <div class="col-6 align-self-left">
+        <div class="offset-1 col-5 align-self-left">
             <img class="img-fluid" src="img/moochojglass.PNG" >
         </div>
         <div class="col-6 align-self-right align-items-right pl-5 pb-md-5">
@@ -352,8 +352,8 @@
 </div>
 </div>
 <div class="col-1"> <!-- create new vl classes for sm and xs screens-->
-<div class="vl  d-xs-none d-md-block" id="followusvl"></div>
-<div class ="vl d-sm-block d-md-none" id="vl2"></div>
+<div class="vl  d-xs-none d-md-block " id="followusvl"></div>
+<div class ="vl d-sm-block d-md-none " id="vl2"></div>
 </div>
 
 <div class="col-5 align-items-right ml-5" id="locationsparagraph" >
