look at orange book for additional notes

--- a/aboutus.html
+++ b/aboutus.html
@@ -97,8 +97,8 @@
 
             <div class="collapse navbar-collapse" id="Navbar">
                <ul class="navbar-nav mr-auto fa-ul " > <!-- fa ul class-->
-                  <li class="nav-item" id="activenav" ><a class="nav-link" href="./contactus.html"><span class="fa fa-list fa-lg"></span>Products</a></li> <!-- active tag specifies current page-->
-                  <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span>Recipes</a></li>
+                  <li class="nav-item"  ><a class="nav-link" href="./contactus.html"><span class="fa fa-list fa-lg"></span>Products</a></li> <!-- active tag specifies current page-->
+                  <li class="nav-item" id="activenav"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span>Recipes</a></li>
                   <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>About</a></li>
                   <li class="nav-item"><a class="nav-link" href=""><span class="fa fa-address-card fa-lg"></span>Find Us</a></li> <!-- link to the id = footer of the page here-->
             </div>
