--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
             <div class="collapse navbar-collapse" id="Navbar">
                <ul class="navbar-nav mr-auto fa-ul " > <!-- fa ul class-->
-                  <li class="nav-item" id="activenav" ><a class="nav-link" href="./contactus.html"><span class="fa fa-list fa-lg"></span>Products</a></li> <!-- active tag specifies current page-->
-                  <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span>Recipes</a></li>
-                  <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>About</a></li>
+                  <li class="nav-item" ><a class="nav-link" href="./contactus.html"><span class="fa fa-list fa-lg"></span>Products</a></li> <!-- active tag specifies current page-->
+                  <li class="nav-item" ><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span>Recipes</a></li>
+                  <li class="nav-item" id="activenav"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>About</a></li>
                   <li class="nav-item"><a class="nav-link" href=""><span class="fa fa-address-card fa-lg"></span>Find Us</a></li> <!-- link to the id = footer of the page here-->
             </div>
                 </ul>
@@ -390,7 +390,7 @@
     <a href="/products.html" class="mr-3">Products</a><a href="/recipes.html" class="mr-3">Recipes</a><a href="/aboutus.html">About</a><br>
     <a href="/findus.html" class="mr-3">Findus</a><a href="/index.html">Home</a>
 </div>
-<div id="locationsparagraph2"class="d-none d-lg-block d-xl-none">
+<div id="locationsparagraph2"class="d-none d-lg-block d-xl-none d-sm-none d-xs-none d-md-none">
     <a href="/products.html" class="mr-2">Products</a><a href="/recipes.html" class="mr-2">Recipes</a><a href="/aboutus.html" >About</a><br>
     <a href="/findus.html" class="mr-2">Findus</a><a href="/index.html">Home</a>
 </div>
@@ -399,7 +399,7 @@
     <a href="/products.html" class="mr-2">Products</a><a href="/recipes.html" class="mr-2">Recipes</a><a href="/aboutus.html">About</a><br>
     <a href="/findus.html" class="mr-2">Findus</a><a href="/index.html">Home</a>
 </div>
-<div id="locpar4"class="d-none d-md-none d-lg-none d-xl-none d-sm-block ">
+<div id="locpar4"class="d-none d-md-none d-lg-none d-xl-none d-sm-block d-xs-none ">
     <a href="/products.html">Products</a><br><a href="/recipes.html">Recipes</a><br><a href="/aboutus.html">About</a><br>
     <a href="/findus.html">Findus</a><br><a href="/index.html">Home</a>
 </div>
