look at orange book for notes

--- a/aboutus.html
+++ b/aboutus.html
@@ -234,10 +234,10 @@
                 <a class="btn btn-social-icon btn-twitter ml-3" href=""><span class="fa fa-twitter"></span></a>
                 </div>
                 </div>
-                      <div class="col-1"> <!-- create new vl classes for sm and xs screens-->
-                        <div class="vl  d-xs-none d-md-block mt-5" id="followusvl"></div>
-                        <div class ="vl d-sm-block d-md-none" id="vl2"></div>
-                      </div>
+                <div class="col-1"> <!-- create new vl classes for sm and xs screens-->
+                    <div class="vl  d-xs-none d-md-block" id="followusvl"></div>
+                    <div class ="vl d-sm-block d-md-none" id="vl2"></div>
+                  </div>
                 
                       <div class="col-5 align-items-right ml-5" id="locationsparagraph">
                 <div class="d-md-none d-lg-none d-xl-block d-sm-none d-xs-none" id="locpar1">
