--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     -->
 
 
-<div class="jumbotron mb-0">
+<div class="jumbotron jumbotron-fluid mb-0">
 <div class="container" >
     <div class="row">
 <div class="col-6 align-self-left ml-5 pl-5">
@@ -361,8 +361,8 @@
 <br> 
 <p id="locationsparagraph27"class="d-md-none d-lg-block d-xl-none d-sm-none d-xs-none">list of cities and countries goes here</p>
 <p  id="locpar3"class="d-xl-none d-lg-none d-md-block d-sm-none align-text-left d-xs-none ">list of<br> countries<br> and cities goes here</p>
-<p id="locpar4"class="d-none d-md-none d-lg-none d-xl-none d-sm-block">list of cities<br> and countries<br>goes here</p>
-<p id="locpar6"class="d-xl-none d-lg-none d-md-none d-sm-none d-xs-block">list of cities<br> and countries<br>goes here</p>
+<p id="locpar4"class="d-none d-md-none d-lg-none d-xl-none d-sm-block d-xs-none">list of cities<br> and countries<br>goes here</p>
+<p id="locpar6"class="d-xl-none d-lg-none d-md-none d-sm-none d-xs-block">list of<br>cities and <br>countries <br>goes here</p>
 </div>
 </div>
 </div>
