look at orange book for notes

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="row">
             <div class="col-4 align-self-left">
                 <div class="card align-items-center" id="cardmiddle" >
-                    <img class="card-img-top "  id="middleimgs" src="img/brain.PNG" alt="Swift4" >
+                    <img class="card-img-top "  id="middleimgs" src="img/brain3.png" alt="Swift4" >
                     <div class="card-body">
                       <h4 class="card-title">Swift 4</h4>
                       <p class="card-text">Learn Swift 4</p>
@@ -226,7 +226,7 @@
             <div class="col-4 align-self-center align-items-center">
                 <div class="card align-items-center align-self-center" id="cardmiddle" >
                 
-                    <img class="card-img-top img-fluid" id="middleimgs" src="img/heart.PNG" alt="Swift4" width="50" height="57" >
+                    <img class="card-img-top img-fluid" id="middleimgs" src="img/heart3.png" alt="Swift4" width="50" height="57" >
                     <div class="card-body">
                       <h4 class="card-title  ml-2">Swift 4</h4>
                       <p class="card-text ml-2">Learn Swift 4</p>
@@ -236,7 +236,7 @@
             </div>
             <div class="col-4">
                 <div class="card align-items-center" id="cardmiddle" >
-                    <img class="card-img-top img-fluid" id="middleimgs" src="img/eye.png" alt="Swift4" >
+                    <img class="card-img-top img-fluid" id="middleimgs" src="img/eye3.png" alt="Swift4" >
                     <div class="card-body">
                       <h4 class="card-title">Swift 4</h4>
                       <p class="card-text">Learn Swift 4</p>
