change colors and add recipe/product info

--- a/aboutus.html
+++ b/aboutus.html
@@ -133,9 +133,9 @@
         </div>
         </div>
         <!-- Above is the cards for sm breakpoints up to XL breakpoints. 
-             Below are the cards for xs breakpoints, from 525 px downwards. -->
-        <div class="text-center container-fluid " id="smandmdhidden">
-            <div class="row col-9 offset-2" id="smandmdhidden">
+             Below are the cards for xs breakpoints, from 779 px downwards. -->
+        <div class="text-center container-fluid " id="smandmdhidden1">
+            <div class="row col-9 offset-2">
                 <div class=" align-self-left mt-5">
                     <div class="card ml-5" style="width: 18rem;">
                         <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
@@ -148,7 +148,18 @@
                 </div>
             </div>
             <div class="row col-9 offset-2">
-                <div class="card ml-5" style="width: 18rem;">
+
+                <div class=" align-self-left mt-5">
+                    <div class="card ml-5" style="width: 18rem;">
+                        <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">moocho juice recipe 2 small<h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+               <!---- <div class="card ml-5" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">moocho juice recipe 2 small</h5>
@@ -156,6 +167,7 @@
                       <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
                   </div>
+                -->
 
             </div>
         </div>
@@ -187,8 +199,8 @@
         </div>
                 <!-- Above is the cards for sm breakpoints up to XL breakpoints. 
                     Below observe the cards for xs breakpoints going from 525 px all the way down to 0px-->
-        <div class="text-center container-fluid " id="smandmdhidden">
-            <div class="row col-9 offset-2" id="smandmdhidden">
+        <div class="text-center container-fluid " id="smandmdhidden1">
+            <div class="row col-9 offset-2" >
                 <div class="align-self-left mt-5">
                     <div class="card ml-5" style="width: 18rem;">
                         <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
@@ -201,6 +213,18 @@
                 </div>
             </div>
             <div class="row col-9 offset-2">
+
+                <div class=" align-self-left mt-5">
+                    <div class="card ml-5" style="width: 18rem;">
+                        <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">moocho juice recipe 4 small<h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+                <!----
                 <div class="card ml-5" style="width: 18rem;">
                     <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                     <div class="card-body">
@@ -209,7 +233,8 @@
                       <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                     </div>
                   </div>
-                  <button type="button" class="btn btn-secondary offset-2 mt-3 mb-5 pt-2 pb-2 pl-2 pr-2">boner gawk gawk</button>
+                -->
+                  <button type="button" class="btn btn-secondary offset-2 mt-3 mb-5 pt-2 pb-2 pl-2 pr-2">button g</button>
 
             </div>
         </div>
