--- a/contactus.html
+++ b/contactus.html
@@ -138,8 +138,8 @@
     </div>
     <!-- Above is the cards for sm breakpoints up to XL breakpoints. 
          Below are the cards for xs breakpoints, from 525 px downwards. -->
-    <div class="container-fluid " id="smandmdhidden">
-        <div class="row col-9 offset-2" id="smandmdhidden">
+    <div class="container-fluid " id="smandmdhidden1">
+        <div class="row col-9 offset-2" >
             <div class=" align-self-left mt-5">
                 <div class="card ml-5 pr-5 pl-5" style="width: 18rem;">
                     <a href="#" id="guavabutton" class="btn btn-primary" data-toggle="modal" data-target="#modalProduct1">  <img class="card-img-top" src="img/apple@3x.png" alt="Card image cap"></a>
@@ -243,8 +243,8 @@
     </div>
             <!-- Above is the cards for sm breakpoints up to XL breakpoints. 
                 Below observe the cards for xs breakpoints going from 525 px all the way down to 0px-->
-                <div class="container-fluid " id="smandmdhidden">
-                    <div class="row col-9 offset-2" id="smandmdhidden">
+                <div class="container-fluid " id="smandmdhidden1">
+                    <div class="row col-9 offset-2" >
                         <div class=" align-self-left mt-5">
                             <div class="card ml-5 pr-5 pl-5" style="width: 18rem;">
                                 <a href="#" id="guavabutton" class="btn btn-primary" data-toggle="modal" data-target="#modalProduct1"> <img class="card-img-top" src="img/guava@3x.png" alt="Card image cap"></a>
@@ -269,8 +269,8 @@
                     </div>
                 </div>
 
-                <div class="container-fluid " id="smandmdhidden">
-                    <div class="row col-9 offset-2" id="smandmdhidden">
+                <div class="container-fluid " id="smandmdhidden1">
+                    <div class="row col-9 offset-2" >
                         <div class=" align-self-left mt-5">
                             <div class="card ml-5 pr-5 pl-5" style="width: 18rem;">
                                 <a href="#" id="guavabutton" class="btn btn-primary" data-toggle="modal" data-target="#modalProduct1"> <img class="card-img-top" src="img/mango@3x.png" alt="Card image cap"></a>
@@ -295,8 +295,8 @@
                     </div>
                 </div>
 
-                <div class="container-fluid " id="smandmdhidden">
-                    <div class="row col-9 offset-2" id="smandmdhidden">
+                <div class="container-fluid " id="smandmdhidden1">
+                    <div class="row col-9 offset-2" >
                         <div class=" align-self-left mt-5">
                             <div class="card ml-5 pr-5 pl-5" style="width: 18rem;">
                                 <a href="#" id="guavabutton" class="btn btn-primary" data-toggle="modal" data-target="#modalProduct1"> <img class="card-img-top" src="img/peach@3x.png" alt="Card image cap"></a>
