change colors, button positions, and fix all breakpoints

--- a/aboutus.html
+++ b/aboutus.html
@@ -134,7 +134,7 @@
         </div>
         <!-- Above is the cards for sm breakpoints up to XL breakpoints. 
              Below are the cards for xs breakpoints, from 779 px downwards. -->
-        <div class="text-center container-fluid " id="smandmdhidden1">
+        <div class="text-center container-fluid d-md-none" id="smandmdhidden1">
             <div class="row col-9 offset-2">
                 <div class=" align-self-left mt-5">
                     <div class="card ml-5" style="width: 18rem;">
@@ -199,13 +199,13 @@
         </div>
                 <!-- Above is the cards for sm breakpoints up to XL breakpoints. 
                     Below observe the cards for xs breakpoints going from 525 px all the way down to 0px-->
-        <div class="text-center container-fluid " id="smandmdhidden1">
+        <div class="text-center container-fluid d-md-none" id="smandmdhidden1">
             <div class="row col-9 offset-2" >
                 <div class="align-self-left mt-5">
                     <div class="card ml-5" style="width: 18rem;">
                         <img class="card-img-top" src="img/finalmoochojglass.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">moocho juice recipe 3<h5>
+                          <h5 class="card-title">moocho juice recipe 3 small<h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           <a href="#" class="btn btn-primary"data-toggle="modal" data-target="#modalRecipe1">Go somewhere</a>
                         </div>
